feat: Ininite scrolling and graphql subscriptions

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,6 +15,7 @@
 .draggable-item {
   user-select: none;
   background: white;
+  cursor: grab;
   transition: background-color 0.2s ease;
   border-bottom: 1px solid rgb(235,235,235);
 }
@@ -22,3 +23,4 @@
 .draggable-item.dragging {
   background: rgb(235,235,235);
 }
+
